# uwac_sim_ws

./: .gitignore  README.md
ekg_auv_testing/: .gitignore  CMakeLists.txt  Seatrac_USBL_msgs.txt  package.xml  readMe.md
ekg_auv_testing/config/: costmap_common_params.yaml
ekg_auv_testing/ekg_spatial_move_plugin/: CMakeLists.txt  package.xml
ekg_auv_testing/ekg_spatial_move_plugin/src/: gazebo_ros_model_velocity.cpp  gazebo_spatial_move.cpp
ekg_auv_testing/ekg_spatial_move_plugin/test/: test_plugin.py
ekg_auv_testing/gazebo_beacon_plugin/: CMakeLists.txt  package.xml
ekg_auv_testing/gazebo_beacon_plugin/src/: gazebo_ros_model_velocity.cpp  gazebo_spatial_move.cpp  speed_limiter.cpp
ekg_auv_testing/gazebo_spatial_move_plugin/: CTestConfiguration.ini  Makefile  cmake_install.cmake  package.xml
ekg_auv_testing/gazebo_spatial_move_plugin/atomic_configure/: local_setup.sh  setup.sh
ekg_auv_testing/gazebo_spatial_move_plugin/catkin_generated/: generate_cached_setup.py  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
ekg_auv_testing/gazebo_spatial_move_plugin/cmake/: ekg_auv_testing-genmsg-context.py  ekg_auv_testing-genmsg.cmake
ekg_auv_testing/gazebo_spatial_move_plugin/devel/: .catkin  .rosinstall
ekg_auv_testing/gazebo_spatial_move_plugin/gtest/: CTestTestfile.cmake
ekg_auv_testing/gazebo_spatial_move_plugin/launch/: boxbot.gazebo
ekg_auv_testing/gazebo_spatial_move_plugin/src/: gazebo_ros_planar_move.cpp  gazebo_spatial_move.cpp  speed_limiter.cpp
ekg_auv_testing/gazebo_spatial_move_plugin/test/: test.urdf
ekg_auv_testing/glider_hybrid_whoi/: model.config  model.sdf
ekg_auv_testing/launch/: auv_test.launch  beacons_test.launch  comm.launch  glider_navigation.launch  glider_test.launch  simple_usbl_test.launch  static_beacon_localization.launch  static_layered_localization.launch  upload_beacon_config.launch  upload_vehicle_kinematics.launch  usbl_test.launch
ekg_auv_testing/launch/integration_tests/: integration_beacons_test.launch  integration_glider_test.launch  seatrac_usbl_sim_test.launch
ekg_auv_testing/launch/multi_beacon/: beacon_node.launch  multi_beacon.launch  simple_beacons.launch
ekg_auv_testing/launch/seatrac_usbl/: beacon.launch  boat_dubins_bcn_mult_pc.launch  replay_mult_pc.launch  x110.launch  xcvr_analysis.launch
ekg_auv_testing/launch/sim_tests/: glider_test.launch
ekg_auv_testing/launch/uploads/: beacon_config.launch  vehicle_kinematics.launch
ekg_auv_testing/models/beacon/: model.config
ekg_auv_testing/msg/: USBLRequestSim.msg  USBLResponse.msg  VehiclePose.msg  bcn_pose.msg
ekg_auv_testing/old/: SimplePath.py
ekg_auv_testing/old/src/: SimpleNavigator.py  StringtoROSmsg.py
ekg_auv_testing/scripts/: get_clients.bat  remove_cr.bat  set_iso_date.bat  sync_iver.bat
ekg_auv_testing/src/: DataManager.py  GPSLocalizer.py  GliderNavigator.py  Graphing3D.py  LocalizationStrategies.py  Logger.py  Report.py  SimpleBeaconNode.py  SimpleBeaconNodeV2.py  SimpleNode.py  StringtoROSmsg.py  TestingUwGliderCommands.py  USBL.py  UsblConfig.py  Visualizer.py  WaypointNavigator.py  graphing.py  report.py
ekg_auv_testing/src/multi_beacon/: BeaconNode.py  spawn_beacon.py
ekg_auv_testing/src/seatrac_usbl/: AcousticAnalysis.py  AppMsgProtocol.py  CommHandler.py  GpsTracker.py  MessageTypes.py  beacon_tester.py
ekg_auv_testing/src/testing/: Graphing3DTester.py  USBLTesting.py  csv_to_pose.py
ekg_auv_testing/urdf/: basic_beacon.xacro  basic_beacon_default.urdf.xacro
ekg_auv_testing/worlds/: auv_test_sim.world  test_sim.world  usbl_test.world  water_sim.world
src/ekg_auv_testing/: CMakeLists.txt  USBL_plugin_msg.txt  readMe.md
src/ekg_auv_testing/gazebo_spatial_move_plugin/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake
src/ekg_auv_testing/launch/: comm.launch  static_beacon_localization.launch
src/ekg_auv_testing/msg/: USBLRequestSim.msg  USBLResponseSim.msg  VehicleLog.msg  VehiclePose.msg
src/ekg_auv_testing/src/: BeaconComm.py  LocalizationStrategies.py  Logger.py  SimpleBeaconNode.py  USBL.py  WaypointNavigator.py  report.py  run_report
src/ekg_auv_testing/urdf/: glider_hybrid_whoi_default_kinematics.urdf.xacro
src/uwac_sim/: .gitignore  CMakeLists.txt  README.md  package.xml
src/uwac_sim/launch/: comm.launch  gps.launch  static_beacon_localization.launch
src/uwac_sim/msg/: Packet.msg  Payload.msg  VehiclePoses.msg  bcn_frame.msg  bcn_frame_array.msg  bcn_pose_array.msg
src/uwac_sim/src/: BeaconComm.py  CommIntegrationTest.py  GPSLocalizer.py  LocalizationStrategies.py  Logger.py  SimpleBeaconNode.py  USBL.py  Visualizer.py  WaypointNavigator.py  report.py
src/uwac_sim/urdf/: basic_beacon_default.urdf.xacro  glider_hybrid_whoi_base_kinematics.xacro  glider_hybrid_whoi_default_kinematics.urdf.xacro
src/uwac_sim/worlds/: water_sim.world
(+124 files in other folders)
